<resources>
    <string name="app_name">BirdWatch</string>
    <string name="name_of_bird">Name:</string>
    <string name="rarity">Rarity:</string>
    <string name="notes">Notes:</string>
    <string name="timestamp">Timestamp:</string>
    <string name="new_bird_head">Add new bird</string>
    <string name="not_saved">Bird was not saved!</string>
    <string name="save_bird">SAVE</string>
    <string name="bird_saved">Saved!</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="save_question">Save new bird?</string>
    <string name="yes">yes</string>
    <string name="no">no</string>

    <string-array name="rarity_array">
        <item>Common</item>
        <item>Rare</item>
        <item>Extremely Rare</item>
    </string-array>

    <string-array name="order_array">
        <item>By date</item>
        <item>By name</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
