<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/birdNameId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_bird" />

    <TextView
        android:id="@+id/rarityId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rarity" />

    <TextView
        android:id="@+id/notesId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notes" />

    <TextView
        android:id="@+id/timestampId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timestamp" />
</LinearLayout>